--- a/style.css
+++ b/style.css
@@ -45,3 +45,25 @@
     font-weight: bold;
     color: #333;
 }
+
+/* CLASSES POUR FORMATION BLOC */
+
+.formation {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+}
+
+.formation h2 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+.formation p {
+    margin: 5px 0;
+    font-family: Arial, sans-serif;
+    color: #777;
+}
