added img and mofied style elements

--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 .titre {
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: #ffffff;
 }
 
 /* ITALIQUE (arial) */
 .italic-text {
     font-style: italic;
     font-family: Arial, sans-serif;
-    color: #555;
+    color: #ffffff;
 }
 
 /* Normal Text (ARIAL) */
@@ -19,16 +19,40 @@
     margin-top: 10px;
 }
 
+.background-image {
+    background-image: url("hell.jpg"); 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
 
 
+/*classes de exeperience*/
+
+.experience {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: rgba(245, 245, 245, 0.8);
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.experience h2{
+    font-size: 20px;
+    font-weight: bold;
+    color: #173;
+}
 
 /*Classes de COMPETENCES*/
 .competences {
     margin-top: 20px;
     border: 1px solid #ccc;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: rgba(245, 245, 245, 0.8);
     border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .competences ul {
@@ -43,7 +67,7 @@
 .competences h2 {
     font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: #173;
 }
 
 /* CLASSES POUR FORMATION BLOC */
@@ -52,14 +76,15 @@
     margin-top: 20px;
     border: 1px solid #ccc;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: rgba(245, 245, 245, 0.8);
     border-radius: 5px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .formation h2 {
     font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: #173;
 }
 
 .formation p {
