italic text nice

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     font-style: italic;
     font-family: Arial, sans-serif;
     color: #ffffff;
+    text-align: center;
+    margin: 70px;
 }
 
 /* Normal Text (ARIAL) */
